# akode

./: CMakeLists.txt  ConfigureChecks.cmake  Makefile.am  akode-config.cmake  akode-config.in  akode.lsm  configure.in.bot  configure.in.in
akodeplay/: CMakeLists.txt  Makefile.am  akodeplay.cpp
arts_plugin/: akodePlayObject_impl.cpp  akodePlayObject_impl.h  akodeSpeexStreamPlayObject_impl.cpp  akodeVorbisStreamPlayObject_impl.cpp  akodearts.idl
lib/: CMakeLists.txt  Makefile.am  akode_export.h.in  akodelib.h  arithmetic.h  audiobuffer.cpp  audiobuffer.h  audioconfiguration.h  audioframe.h  auto_sink.cpp  auto_sink.h  buffered_decoder.cpp  buffered_decoder.h  bytebuffer.cpp  bytebuffer.h  converter.cpp  converter.h  crossfader.cpp  crossfader.h  decoder.h  decoderpluginhandler.cpp  encoder.h  encoderpluginhandler.cpp  fast_resampler.cpp  fast_resampler.h  file.h  frametostream_decoder.cpp  localfile.cpp  localfile.h  magic.cpp  magic.h  mmapfile.cpp  mmapfile.h  player.cpp  player.h  pluginhandler.cpp  pluginhandler.h  resampler.h  resamplerpluginhandler.cpp  sink.h  (+9 more)
plugins/: CMakeLists.txt  Makefile.am
plugins/alsa_sink/: CMakeLists.txt  Makefile.am  alsa_sink.cpp  alsa_sink.h
plugins/ffmpeg_decoder/: CMakeLists.txt  Makefile.am  akodeFFMPEGPlayObject.mcopclass  ffmpeg_decoder.cpp  ffmpeg_decoder.h
plugins/jack_sink/: CMakeLists.txt  jack_sink.cpp  jack_sink.h
plugins/mpc_decoder/: CMakeLists.txt  Makefile.am  mpc_decoder.cpp  mpc_decoder.h
plugins/mpc_decoder/mppdec/: CMakeLists.txt
plugins/mpeg_decoder/: CMakeLists.txt  Makefile.am  mpeg_decoder.cpp  mpeg_decoder.h
plugins/oss_sink/: CMakeLists.txt  oss_sink.cpp  oss_sink.h
plugins/polyp_sink/: CMakeLists.txt  polyp_sink.cpp  polyp_sink.h
plugins/src_resampler/: CMakeLists.txt  Makefile.am  src_resampler.cpp  src_resampler.h
plugins/sun_sink/: CMakeLists.txt  sun_sink.cpp  sun_sink.h
plugins/xiph_decoder/: CMakeLists.txt  Makefile.am  flac_decoder.cpp  flac_decoder.h  speex_decoder.cpp  speex_decoder.h  vorbis_decoder.cpp  vorbis_decoder.h  xiph_decoder.cpp  xiph_decoder.h
